# sst-rdex-brain

./: .gitignore  README.md  data  env-nobuild.yml  pyproject.toml
conf/base/: catalog.yml  parameters.yml
conf/base/parameters/: data_management.yml  phenotype_prediction.yml  produce_plots.yml  rdex_prediction.yml
notebooks/: 20240605-Correlations.ipynb  20240606-SmoothPlotCorr.Rmd  20240606-SmoothPlotCorr.nb.html
scripts/: .RData  .Rhistory  MAPModelRegressorsAll.sh
src/sst_rdex_brain/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/sst_rdex_brain/extras/datasets/: matlab_dataset.py
src/sst_rdex_brain/pipelines/data_management/: README.md  __init__.py  nodes.py  pipeline.py
src/sst_rdex_brain/pipelines/phenotype_prediction/: README.md  __init__.py  loader_nodes.py  nodes.py  pipeline.py
src/sst_rdex_brain/pipelines/produce_plots/: README.md  __init__.py  crosspredict_plots.py  helper_functions.py  nodes.py  phenotype_predict_plots.py  pipeline.py  rdex_predict_plots.py
src/sst_rdex_brain/pipelines/rdex_prediction/: README.md  __init__.py  loader_nodes.py  nodes.py  pipeline.py  transformer_nodes.py
src/tests/pipelines/data_management/: test_pipeline.py
src/tests/pipelines/phenotype_prediction/: test_pipeline.py
src/tests/pipelines/produce_plots/: test_pipeline.py
src/tests/pipelines/rdex_prediction/: test_pipeline.py
